# simd

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  dynamic_aligned_allocator.hpp  main.cpp  static_aligned_allocator.hpp
accumulate/avx/: implementation.cpp
accumulate/avx512f/: implementation.cpp
accumulate/default/: implementation.cpp  implementation.h
benchmarks/: accumulate.cpp
benchmarks/accumulate/: accumulate.cpp  fixture.hpp  manual_operations_traits.hpp
benchmarks/accumulate/avx/: unroll_instantiations.cpp
benchmarks/accumulate/avx2/: unroll_instantiations.cpp
benchmarks/accumulate/avx512f/: unroll_instantiations.cpp
benchmarks/accumulate/sse/: unroll_instantiations.cpp
benchmarks/types/: load_partial_fixture.hpp
benchmarks/types/sse/: load_partial.cpp
benchmarks/types/sse2/: load_partial.cpp
instruction_sets/avx/: operations.cpp  operations.h
instruction_sets/avx-512/: operations.cpp  operations.h
instruction_sets/none/: operations.cpp  operations.h
instruction_sets/sse/: operations.cpp  operations.h
src/: dynamic_aligned_allocator.hpp  instrset_detect.cpp  instrset_detect.h  instrset_detect.hpp  static_aligned_allocator.hpp
src/accumulate/: accumulate.cpp  accumulate.h  implementation.hpp  scalar_implementation.hpp  simd_implementation_decl.hpp  simd_implementation_def.hpp
src/accumulate/avx/: declaration.hpp  definition.hpp  implementation.cpp  implementation.h  instantiation.cpp  instantiation.h
src/accumulate/avx2/: declaration.hpp  definition.hpp  instantiation.cpp  instantiation.h
src/accumulate/avx512f/: declaration.hpp  definition.hpp  implementation.h  instantiation.cpp  instantiation.h
src/accumulate/scalar/: implementation.cpp  implementation.h  instantiation.cpp  instantiation.h
src/accumulate/sse/: declaration.hpp  definition.hpp  implementation.cpp  implementation.h  instantiation.cpp  instantiation.h
src/types/: operations_traits.cpp  operations_traits.hpp  simd_tags.h  vector.hpp
src/types/avx/: vector.hpp  vector_impl_double.hpp  vector_impl_float.hpp
src/types/avx2/: vector.hpp  vector_impl_int16.hpp  vector_impl_int32.hpp  vector_impl_int64.hpp  vector_impl_int8.hpp
src/types/avx512f/: vector.hpp  vector_impl_double.hpp  vector_impl_float.hpp
src/types/scalar/: vector.hpp  vector_impl_double.hpp  vector_impl_float.hpp
src/types/sse/: vector.hpp  vector_impl_float.hpp
src/types/sse2/: vector_impl_float.hpp
tests/: accumulate.cpp  tests_utils.h
tests/types/: types.hpp
tests/types/avx/: instantiations.cpp
tests/types/avx2/: instantiations.cpp
tests/types/avx512f/: instantiations.cpp
tests/types/sse/: instantiations.cpp
